Add purchase process tracking module

--- a/upcv_app/scompras_app/templates/scompras/detalle_solicitud.html
+++ b/upcv_app/scompras_app/templates/scompras/detalle_solicitud.html
@@ -169,6 +169,8 @@
               </tbody>
             </table>
             
+            {% include 'scompras/partials/_timeline_proceso.html' %}
+
             <h4 style="font-weight: 600; margin: 12px 0 5px 0; font-size: 18px;">Justificación:</h4>
             <p style="opacity: 0.8; font-size: 16px;">
               {{ solicitud.descripcion }}
