--- a/upcv_app/scompras_app/templates/scompras/base.html
+++ b/upcv_app/scompras_app/templates/scompras/base.html
@@ -293,6 +293,8 @@
               
   {% endif %}
 
+  {% include "scompras/partials/_menu_analista.html" %}
+
   {# Mostrar menú administrativo a Administrador/PRESUPUESTO #}
   {% if es_admin or es_presupuesto %}
     <li class="sidebar-list" ><i class="fa fa-thumb-tack"> </i><a class="sidebar-link " href="{% url 'scompras:dashboard_admin' %}">
