--- a/upcv_app/scompras_app/templates/scompras/base.html
+++ b/upcv_app/scompras_app/templates/scompras/base.html
@@ -368,6 +368,7 @@
           <li><a href="{% url 'scompras:importar_excel' %}">Importar Insumos</a></li>
           <li><a href="{% url 'scompras:user_create' %}">Usuarios</a></li>
           <li><a href="{% url 'scompras:editar_institucion' %}">Institución</a></li>
+          <li><a href="{% url 'scompras:tipos_proceso_list' %}">Tipos de Proceso</a></li>
           <li><a href="#">Manuales</a></li>
         </ul>
       </li>
