Add admin menu link for process types

--- a/upcv_app/scompras_app/templates/scompras/base.html
+++ b/upcv_app/scompras_app/templates/scompras/base.html
@@ -368,6 +368,7 @@
           <li><a href="{% url 'scompras:importar_excel' %}">Importar Insumos</a></li>
           <li><a href="{% url 'scompras:user_create' %}">Usuarios</a></li>
           <li><a href="{% url 'scompras:editar_institucion' %}">Institución</a></li>
+          {% include "scompras/partials/_menu_tipos_proceso_admin.html" %}
           <li><a href="#">Manuales</a></li>
         </ul>
       </li>
