Restore modal alerts partial

--- a/upcv_app/scompras_app/templates/scompras/base.html
+++ b/upcv_app/scompras_app/templates/scompras/base.html
@@ -57,6 +57,7 @@
 
 <!-- Responsive css-->
 <link rel="stylesheet" type="text/css" href="{% static 'assets/css/responsive.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'scompras/css/modal_riho.css' %}">
 </head>
   <body> 
 
@@ -368,6 +369,7 @@
           <li><a href="{% url 'scompras:importar_excel' %}">Importar Insumos</a></li>
           <li><a href="{% url 'scompras:user_create' %}">Usuarios</a></li>
           <li><a href="{% url 'scompras:editar_institucion' %}">Institución</a></li>
+          {% include "scompras/partials/_menu_tipos_proceso_admin.html" %}
           <li><a href="#">Manuales</a></li>
         </ul>
       </li>
@@ -482,6 +484,8 @@
 
 {# Bloque opcional para inyectar JS adicional (p. ej. gráficas Chart.js en dashboards) #}
 {% block extra_js %}{% endblock %}
+<script src="{% static 'scompras/js/ui_modals.js' %}"></script>
+{% include "scompras/partials/_alerts_modal_messages.html" %}
 
 <footer class="footer"> <div class="container-fluid"> 
   <div class="row"> <div class="col-md-12 footer-copyright text-center"> 
