--- a/upcv_app/scompras_app/templates/scompras/crear_requerimiento.html
+++ b/upcv_app/scompras_app/templates/scompras/crear_requerimiento.html
@@ -125,7 +125,7 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="crearRequerimientoModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade riho-modal" id="crearRequerimientoModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content dark-sign-up">
       <div class="modal-body social-profile text-start p-4">
