--- a/upcv_app/scompras_app/templates/scompras/procesos/pasos_tipo_proceso.html
+++ b/upcv_app/scompras_app/templates/scompras/procesos/pasos_tipo_proceso.html
@@ -6,7 +6,14 @@
     <div class="page-title">
       <div class="row align-items-center">
         <div class="col-8">
-          <h2 class="mb-0">Pasos del proceso: {{ tipo.nombre }}</h2>
+          <h2 class="mb-0">
+            Pasos del proceso:
+            {% if subtipo %}
+              {{ tipo.nombre }} / Subtipo: {{ subtipo.nombre }}
+            {% else %}
+              {{ tipo.nombre }}
+            {% endif %}
+          </h2>
           <p class="text-muted mb-0">Gestiona el catálogo de pasos por tipo y subtipo.</p>
         </div>
         <div class="col-4 text-end">
@@ -67,7 +74,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="modalCrearPaso" tabindex="-1" aria-hidden="true">
+<div class="modal fade riho-modal" id="modalCrearPaso" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -101,14 +108,14 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="submit" form="formCrearPaso" class="btn btn-primary">Guardar</button>
+        <button type="button" class="btn btn-upcv-outline" data-bs-dismiss="modal">Cancelar</button>
+        <button type="submit" form="formCrearPaso" class="btn btn-upcv-primary">Guardar</button>
       </div>
     </div>
   </div>
 </div>
 
-<div class="modal fade" id="modalEditarPaso" tabindex="-1" aria-hidden="true">
+<div class="modal fade riho-modal" id="modalEditarPaso" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -147,8 +154,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="submit" form="formEditarPaso" class="btn btn-primary">Guardar</button>
+        <button type="button" class="btn btn-upcv-outline" data-bs-dismiss="modal">Cancelar</button>
+        <button type="submit" form="formEditarPaso" class="btn btn-upcv-primary">Guardar</button>
       </div>
     </div>
   </div>
@@ -175,11 +182,25 @@
     .then(data => {
       if (data.success) {
         window.location.reload();
-      } else {
-        alert('No fue posible guardar los cambios.');
+      } else if (window.showAppModal) {
+        window.showAppModal({
+          title: 'Error',
+          message: 'No fue posible guardar los cambios.',
+          type: 'error',
+          autoclose: false,
+        });
       }
     })
-    .catch(() => alert('No fue posible guardar los cambios.'));
+    .catch(() => {
+      if (window.showAppModal) {
+        window.showAppModal({
+          title: 'Error',
+          message: 'No fue posible guardar los cambios.',
+          type: 'error',
+          autoclose: false,
+        });
+      }
+    });
   };
 
   const formCrearPaso = document.getElementById('formCrearPaso');
