--- a/upcv_app/scompras_app/templates/scompras/asignar_departamento.html
+++ b/upcv_app/scompras_app/templates/scompras/asignar_departamento.html
@@ -45,14 +45,7 @@
             <div class="card-body">
 
               <!-- Mostrar mensajes -->
-              {% if messages %}
-              <ul>
-                {% for message in messages %}
-                <li class="message">{{ message }}</li>
-                {% endfor %}
-              </ul>
-              {% endif %}
-
+              
               {% if form.errors %}
               <div class="alert alert-danger">
                 <ul>
@@ -203,7 +196,7 @@
 
 <div class="blur-overlay"></div>
 
-<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+<div class="modal fade riho-modal" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content dark-sign-up">
       <form id="deleteForm" method="POST">
