--- a/upcv_app/scompras_app/templates/scompras/detalle_solicitud.html
+++ b/upcv_app/scompras_app/templates/scompras/detalle_solicitud.html
@@ -564,7 +564,7 @@
 
 
 <!-- Modal Agregar Servicio -->
-<div class="modal fade" id="modalAgregarServicio" tabindex="-1" aria-labelledby="modalAgregarServicioLabel" aria-hidden="true">
+<div class="modal fade riho-modal" id="modalAgregarServicio" tabindex="-1" aria-labelledby="modalAgregarServicioLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content dark-sign-up">
       <div class="modal-body social-profile text-start p-4">
@@ -624,7 +624,7 @@
 
 
 <!-- Modal Editar Solicitud -->
-<div class="modal fade" id="modalEditarSolicitud" tabindex="-1" aria-labelledby="modalEditarSolicitudLabel" aria-hidden="true">
+<div class="modal fade riho-modal" id="modalEditarSolicitud" tabindex="-1" aria-labelledby="modalEditarSolicitudLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content dark-sign-up">
       <div class="modal-body social-profile text-start p-4">
@@ -712,7 +712,7 @@
 
 
 <!-- Modal Ingresar Cantidad -->
-<div class="modal fade" id="modalCantidad" tabindex="-1" aria-labelledby="modalCantidadLabel" aria-hidden="true">
+<div class="modal fade riho-modal" id="modalCantidad" tabindex="-1" aria-labelledby="modalCantidadLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content dark-sign-up">
       <div class="modal-body social-profile text-start p-4">
@@ -778,7 +778,7 @@
 </div>
 
 <!-- Modal editar característica especial -->
-<div class="modal fade" id="modalEditarCaracteristica" tabindex="-1" aria-labelledby="modalEditarCaracteristicaLabel" aria-hidden="true">
+<div class="modal fade riho-modal" id="modalEditarCaracteristica" tabindex="-1" aria-labelledby="modalEditarCaracteristicaLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content dark-sign-up">
       <div class="modal-body social-profile text-start p-4">
@@ -812,7 +812,7 @@
 </div>
 
 <!-- Modal de Alerta -->
-<div class="modal fade" id="modalAlerta" tabindex="-1" aria-labelledby="modalAlertaLabel" aria-hidden="true">
+<div class="modal fade riho-modal" id="modalAlerta" tabindex="-1" aria-labelledby="modalAlertaLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content dark-sign-up">
       <div class="modal-body social-profile text-start p-4">
